--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/pages/login/index.hbs --no-cache",
-    "build": "parcel build ./src/pages/login/index.hbs --dist-dir ./dist/ --no-source-maps && node server.js"
+    "build": "parcel build ./src/pages/login/index.hbs --dist-dir ./dist/ --no-source-maps && node server.js",
+    "start": "parcel ./src/pages/login/index.hbs --open --port 3000 --dist-dir ./dist/ --no-source-maps"
   },
   "repository": {
     "type": "git",
