--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "homepage": "https://github.com/rzainullov/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
-    "autoprefixer": "^10.4.8",
-    "parcel": "^2.7.0",
-    "postcss": "^8.4.16",
-    "postcss-cli": "^10.0.0",
-    "postcss-import": "^15.0.0",
-    "postcss-url": "^10.1.3"
+    "autoprefixer": "10.4.8",
+    "parcel": "2.7.0",
+    "postcss": "8.4.16",
+    "postcss-cli": "10.0.0",
+    "postcss-import": "15.0.0",
+    "postcss-url": "10.1.3"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "4.18.1"
   }
 }
